# support-matching

./: .gitignore  .pre-commit-config.yaml  .pylintrc  NOTES.md  README.md  adult.sh  clustering.py  data_loading.py  finetuning.py  gdro.py  generic_run.py  guild.yml  install.sh  main.py  merge_cluster_label_files.py  mypy.ini  overcluster.sh  plots.py  pyproject.toml  python-ot.job  python.job  ray.job  ray_2gpus.job  ray_4gpus.job  requirements.txt  run.py  run_adaptation.py  run_all.py  run_baselines.py  run_both.py  run_both_fs.py  run_both_ss.py  run_cl.py  run_clust.py  run_d.py  run_dis.py  run_fs.py  run_gdro.py  run_label.py  run_lr.py  (+25 more)
.github/workflows/: ci.yml
advrep/algs/: adv.py  base.py  domain_independent.py  gdro.py  laftr.py  lff.py  supmatch.py
advrep/models/: autoencoder.py  base.py  classifier.py  discriminator.py  factory.py  set_transformer.py
advrep/optimisation/: build.py  evaluation.py  loss.py  mmd.py  utils.py
analysis/: analyze_guild_runs.ipynb  wandb_downloader.py  wandb_utils.py
analysis/cvpr22/: 3dig_4miss.ipynb  mil_ablation_missing_subgroup.ipynb  mil_ablation_subgroup_bias.ipynb
analysis/iclr21/: adult_wandb.ipynb  adult_wandb_hydra.ipynb  cmnist_2_digits_2colors.ipynb  cmnist_2_digits_2colors_mildly_subsampled.ipynb  cmnist_2_digits_2colors_mildly_subsampled_clust_metrics.ipynb  cmnist_2_digits_2colors_miss_s.ipynb  cmnist_wandb.ipynb  cmnist_wandb_hydra.ipynb  mim.ipynb  utils.py
analysis/icml21/: 3dig_4miss.ipynb  adult_miss_s.ipynb  adult_partial.ipynb  celeba_no_smiling_females.ipynb  mildly_subs_miss_s-0.5cont-more_data.ipynb  overcluster8_mildly_subs_miss_s-0.5cont-more_data.ipynb  overcluster8_subsampled-0.66cont.ipynb  overcluster_mildly_subs_miss_s-0.5cont-more_data.ipynb  overcluster_subsampled-0.66cont.ipynb  subsampled-0.66cont.ipynb
analysis/journal/: missing_subgroup.ipynb  subgroup_bias.ipynb
analysis/neurips20_supplementary/: adult_1group.csv  adult_1group_ens_balanced_context.csv  adult_1group_ens_no_balancing.csv  adult_1group_kmeans_EnS.csv  adult_1group_kmeans_education.csv  adult_1group_kmeans_eval_on_recon.csv  adult_1group_kmeans_supersample.csv  adult_1group_kmeans_supersample_eval_on_recon.csv  adult_1group_ranking_EnS.csv  adult_1group_ranking_education.csv  adult_1group_ranking_eval_on_recon.csv  adult_1group_ranking_supersample.csv  adult_1group_ranking_supersample_eval_on_recon.csv  adult_2groups.csv  adult_2groups_kmeans_education.csv  adult_2groups_kmeans_eval_on_recon.csv  adult_2groups_kmeans_supersample.csv  adult_2groups_kmeans_supersample_eval_on_recon.csv  adult_2groups_ranking_education.csv  adult_2groups_ranking_eval_on_recon.csv  adult_2groups_ranking_supersample.csv  adult_2groups_ranking_supersample_eval_on_recon.csv  adult_dro_1group.csv  adult_dro_2group.csv  adult_dro_baseline_missing_1_group.csv  adult_education.ipynb  adult_gender.ipynb  cmnist_1group_256.csv  cmnist_2_digits_3colors.ipynb  cmnist_2digits_2colors.ipynb  cmnist_2digits_2colors_1missing.csv  cmnist_2digits_3colors.csv  produce_table.ipynb  utils.py
analysis/neurips21/: overcluster_subsampled-0.66cont-Copy1.ipynb  subsampled-0.66cont.ipynb
analysis/tmlr/: acs.py  celeba.ipynb  celeba_new_incomplete_results.ipynb  celeba_no_smiling_females.py  celeba_no_smiling_males.py  celeba_no_unsmiling_females.py  celeba_no_unsmiling_males.py  change_group.py  cmnist_2dig.py  cmnist_2dig_instancewise.py  cmnist_2dig_overcluster.py  cmnist_3dig.py  nicopp.ipynb  nicopp.py  nicopp_bag_ablation.py  nicopp_labelnoise.py  nicopp_more_ablations.py  nih_sensitivity_analysis.ipynb
clustering/: __init__.py  artifact.py  clustering.py  data_loading.py  encode.py  encoder.py  finetuning.py  kmeans.py  metrics.py  pipeline.py
clustering/configs/: arguments.py
clustering/layers/: __init__.py  conv.py  resnet.py
clustering/models/: __init__.py  autoencoder.py  base.py  classifier.py  factory.py  inn.py  labelers.py  methods.py  model.py  pseudo_labelers.py  resnet.py  selfsupervised.py
clustering/optimisation/: __init__.py  build.py  evaluation.py  inn_training.py  k_means.py  loss.py  train.py  utils.py
conf/: baseline.yaml  baselines.yaml  config.yaml  data_gen.yaml  logistic_regression.yaml
conf/alg/: supmatch_no_disc.yaml
conf/baseline/: cnn.yaml  gdro.yaml
conf/baselines/: cnn.yaml  dro.yaml  gdro.yaml
conf/clust/: adult.yaml  vague_spaceship.yaml  (+1 more)
external_confs/: baselines.yaml  celeba.yaml  cmnist.yaml  config.yaml  nih_sb.yaml
fdm/: __init__.py
flags/: 2_digit_cmnist_s=0y=1_missing.yaml  adult.yaml  adult_clustering.yaml  adult_clustering_a_new_hope.yaml  adult_clustering_a_new_hope.yml  adult_clustering_the_empire_strikes_back.yaml  adult_pipeline.yaml  adult_train_on_enc.yml  adult_train_on_enc_old.yml  adult_train_on_recon.yml  adult_train_on_recon_old.yml  adult_variants.yml  celeba_fdm.yaml  cluster_cmnist_10_vae.yaml  cluster_cmnist_2_vae.yaml  clustering.yml  cmnist_ae.yaml  cmnist_ae_2_digits.yaml  cmnist_ae_2_digits_clustering.yaml  data_spec.yml  encoder.yml  fdm.yml  graceful-dust-216.yaml  missing_s0_cmnist_2.yaml  mvp_args.yaml  mvp_pipeline_cmnist_2.yaml  mvp_pipeline_cmnist_2.yml  pipeline_cmnist_2.yaml  pipeline_cmnist_2_improved.yaml  sleek_sky.yaml  the_phantom_menace.yaml  vague_spaceship.yaml  vague_spaceship_2digits.yaml
hydra_plugins/: sp_plugins.py
kornia/: geometry.py
scripts/: adult_baseline.sh  adult_no_balancing.sh  adult_pipeline.sh  cmnist_10_digits.sh  cmnist_2_digits.sh  cmnist_kmeans_10_digits.sh  cmnist_kmeans_2_digits.sh  compare.sh  compare_adult.sh  compare_cmnist.sh  compare_multirun.sh  dro_adult.sh  hpc_no_clustering_cmnist_2_digits.sh  no_clustering_cmnist_10_digits.sh  no_clustering_cmnist_2_digits.sh  run_cnn_baseline_2digits.sh  run_dro_baseline_10digits.sh  run_dro_baseline_2digits.sh  run_latest_master.sh  save_nicopp_splits.py
shared/: __init__.py  relay.py
src/: discrete.py  io.py  logging.py  loss.py  mmd.py  plotting.py  relay.py  utils.py
tests/: balancing_test.py  cluster_association_test.py  joint_prob_test.py  stratified_sampler_test.py
(+799 files in other folders)
